fix: all known issues so far